# llm-apis

./: .gitignore  poc.ipynb  pyproject.toml  release.sh
src/vg/: main.py  utils.py
src/vg/scripts/: install_service.py
